update the UI, add some other stuff

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!-- hero section start -->
     <header class="hero-section">
         <!-- this container class used for wrap the content into a fixed width -->
         <div class="container">
@@ -41,17 +42,23 @@
             </div>
         </div>
     </header>
+    <!-- hero section end -->
+    <!-- bolg section start -->
 
     <section class="blog">
         <div class="container">
-
             <div class="parent-grid-container">
-                <div class="navigation-area">
-                    <a class="nav-links" href="./markup/upComming.html">Up Coming Match</a>
-                    <a class="nav-links" href="./markup/group.html">All Group</a>
+                <!-- the navigataion area start -->
+                <aside class="navigation-area">
+                    <a class="nav-links" href="./markup/upComming.html">Up Coming Match</a
+            >
+            <a class="nav-links" href="./markup/group.html">All Group</a>
                     <a class="nav-links active" href="#">Blog</a>
-                </div>
-                <div class="blog-area card-grid-container">
+                </aside>
+                <!-- navigation area end -->
+                <!-- card container start -->
+
+                <main class="blog-area card-grid-container">
                     <!-- 1st row 1st card -->
                     <article class="blog-card">
                         <div class="card-image">
@@ -59,16 +66,18 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
                     <!-- 1st row 2 card -->
                     <article class="blog-card">
@@ -77,16 +86,18 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
                     <!-- 1st row 3 card -->
 
@@ -96,16 +107,18 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
 
                     <!-- 2nd row 1 card -->
@@ -116,16 +129,18 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
 
                     <!-- 2nd row 2 card -->
@@ -136,16 +151,18 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
 
                     <!-- 2nd row 3 card -->
@@ -156,18 +173,19 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
-
 
                     <!-- 3rd row 1 card -->
                     <article class="blog-card">
@@ -176,16 +194,18 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
 
                     <!-- 3rd row 2 card -->
@@ -195,18 +215,19 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
-
 
                     <!-- 3rd row 3 card -->
                     <article class="blog-card">
@@ -215,47 +236,57 @@
                         </div>
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
-                            <h1 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h1>
+                            <h1 class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </h1>
                             <div class="article-stat">
                                 <div class="time">
                                     <i class="fa-solid fa-clock"></i> <span>10 Hour</span>
                                 </div>
-                                <div class="comment"><i class="fa-solid fa-message"></i> <span>76</span></div>
+                                <div class="comment">
+                                    <i class="fa-solid fa-message"></i> <span>76</span>
+                                </div>
                             </div>
-
                         </div>
-
                     </article>
-
-                </div>
+                </main>
             </div>
+            <!-- this will apperes on tab divice -->
             <div class="display-on-tab">
-                <a href="#" class="">Veiw All </i>
+                <a href="#">Veiw All </a>
             </div>
+        </div>
     </section>
 
     <footer>
         <div class="container">
             <h2>Goal</h2>
+            <!-- footer text menu -->
             <ul class="footer-menu">
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Terms of Servoce</a></li>
-                <li> <a href="#">privecy setting</a></li>
+                <li><a href="#">privecy setting</a></li>
                 <li><a href="#">goal app</a></li>
                 <li><a href="#">goal live</a></li>
+            </ul>
+            <!-- footer icon menu -->
+            <ul class="footer-icon-menu">
+                <li>
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i
+            ></a>
+                </li>
 
-
-                </ul>
-
-                <ul class="footer-icon-menu">
-                    <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></li>
-                    <li>
-                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram-square"></i></a>
-                    </li>
-                </ul>
-            </div>
-            </footer>
+                <li>
+                    <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i
+            ></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram-square"></i
+            ></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
