--- a/markup/upComming.html
+++ b/markup/upComming.html
@@ -48,13 +48,14 @@
         <div class="container">
 
             <div class="parent-grid-container">
-                <div class="navigation-area">
+                <!-- vagigation area -->
+                <aside class="navigation-area">
                     <a class="nav-links active" href="#">Up Coming Match</a>
                     <a class="nav-links" href="./group.html">All Group</a>
                     <a class="nav-links " href="../index.html">Blog</a>
-                </div>
-                <div class="blog-area card-grid-container">
-                    <!-- 1st row 1st card -->
+                </aside>
+                <article class="blog-area card-grid-container">
+                    <!-- 1st row  -->
                     <div class="match-card">
                         <div class="flags">
                             <img src="../assets/images/Flag.png" alt="">
@@ -66,78 +67,84 @@
                     </div>
                     <div class="match-card">
                         <div class="flags">
-                            <img src="../assets/images/Flag.png" alt="">
+                            <img src="../assets/images/ar.svg" alt="">
+                            <h2>vs</h2>
+                            <img src="../assets/images/pt.svg" alt="">
+                        </div>
+                        <h1 class="countreys-name"> Argentina Vs Portugal</h1>
+                        <p class="time">April 04, 2023, 3.00 AM</p>
+                    </div>
+                    <div class="match-card">
+                        <div class="flags">
+                            <img src="../assets/images/br.svg" alt="">
+                            <h2>vs</h2>
+                            <img src="../assets/images/nl.svg" alt="">
+                        </div>
+                        <h1 class="countreys-name"> Brazil Vs Netherlands</h1>
+                        <p class="time">April 05, 2023, 5.30 pb</p>
+                    </div>
+
+
+
+                    <!-- 2nd row  -->
+
+                    <div class="match-card">
+                        <div class="flags">
+                            <img src="../assets/images/pt.svg" alt="">
+                            <h2>vs</h2>
+                            <img src="../assets/images/br.svg" alt="">
+                        </div>
+                        <h1 class="countreys-name"> Portugal Vs Brazil</h1>
+                        <p class="time">April 06, 2023, 7.00 AM</p>
+                    </div>
+                    <div class="match-card">
+                        <div class="flags">
+                            <img src="../assets/images/ar.svg" alt="">
+                            <h2>vs</h2>
+                            <img src="../assets/images/br.svg" alt="">
+                        </div>
+                        <h1 class="countreys-name"> Argentina Vs Brazil</h1>
+                        <p class="time">April 06, 2023, 10.00 AM</p>
+                    </div>
+                    <div class="match-card">
+                        <div class="flags">
+                            <img src="../assets/images/ie.svg" alt="">
                             <h2>vs</h2>
                             <img src="../assets/images/germany Flag.png" alt="">
                         </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
+                        <h1 class="countreys-name"> Ireland Vs Germany</h1>
+                        <p class="time">April 10, 2023, 8.00 AM</p>
+                    </div>
+                    <!-- 3rd row -->
+                    <div class="match-card">
+                        <div class="flags">
+                            <img src="../assets/images/Flag.png" alt="">
+                            <h2>vs</h2>
+                            <img src="../assets/images/pt.svg" alt="">
+                        </div>
+                        <h1 class="countreys-name"> France Vs Portugal</h1>
                         <p class="time">April 01, 2023, 1.00 AM</p>
+                    </div>
+                    <div class="match-card">
+                        <div class="flags">
+                            <img src="../assets/images/ar.svg" alt="">
+                            <h2>vs</h2>
+                            <img src="../assets/images/germany Flag.png" alt="">
+                        </div>
+                        <h1 class="countreys-name"> Argentina Vs Germany</h1>
+                        <p class="time">April 15, 2023, 4.00 AM</p>
                     </div>
                     <div class="match-card">
                         <div class="flags">
                             <img src="../assets/images/Flag.png" alt="">
                             <h2>vs</h2>
-                            <img src="../assets/images/germany Flag.png" alt="">
+                            <img src="../assets/images/ie.svg" alt="">
                         </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
-                        <p class="time">April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="match-card">
-                        <div class="flags">
-                            <img src="../assets/images/Flag.png" alt="">
-                            <h2>vs</h2>
-                            <img src="../assets/images/germany Flag.png" alt="">
-                        </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
-                        <p class="time">April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="match-card">
-                        <div class="flags">
-                            <img src="../assets/images/Flag.png" alt="">
-                            <h2>vs</h2>
-                            <img src="../assets/images/germany Flag.png" alt="">
-                        </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
-                        <p class="time">April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="match-card">
-                        <div class="flags">
-                            <img src="../assets/images/Flag.png" alt="">
-                            <h2>vs</h2>
-                            <img src="../assets/images/germany Flag.png" alt="">
-                        </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
-                        <p class="time">April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="match-card">
-                        <div class="flags">
-                            <img src="../assets/images/Flag.png" alt="">
-                            <h2>vs</h2>
-                            <img src="../assets/images/germany Flag.png" alt="">
-                        </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
-                        <p class="time">April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="match-card">
-                        <div class="flags">
-                            <img src="../assets/images/Flag.png" alt="">
-                            <h2>vs</h2>
-                            <img src="../assets/images/germany Flag.png" alt="">
-                        </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
-                        <p class="time">April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="match-card">
-                        <div class="flags">
-                            <img src="../assets/images/Flag.png" alt="">
-                            <h2>vs</h2>
-                            <img src="../assets/images/germany Flag.png" alt="">
-                        </div>
-                        <h1 class="countreys-name"> France Vs Germany</h1>
+                        <h1 class="countreys-name"> France Vs Ireland</h1>
                         <p class="time">April 01, 2023, 1.00 AM</p>
                     </div>
 
-                </div>
+                </article>
             </div>
             <div class="display-on-tab">
                 <a href="#" class="">Veiw All </i>
