--- a/markup/group.html
+++ b/markup/group.html
@@ -37,7 +37,7 @@
               </a>
                     </div>
                     <div class="hero-sectoin-rigth">
-                        <img src="./assets/images/Banner Image.png" alt="an image of a football player " />
+                        <img src="../assets/images/groupBanner.png" alt="an image of a football player " />
                     </div>
                 </div>
             </div>
@@ -48,12 +48,12 @@
         <div class="container">
 
             <div class="parent-grid-container">
-                <div class="navigation-area">
+                <aside class="navigation-area">
                     <a class="nav-links" href="./upComming.html">Up Coming Match</a>
                     <a class="nav-links  active" href="">All Group</a>
                     <a class="nav-links" href="../index.html">Blog</a>
-                </div>
-                <div class="blog-area card-grid-container">
+                </aside>
+                <article class="blog-area card-grid-container">
                     <!-- 1st row 1st card -->
                     <div class="group-card">
                         <h2 class="group-name">
@@ -61,10 +61,11 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+
+                            <li>Qatar</li>
+                            <li>Ecuador</li>
+                            <li>Senegal</li>
+                            <li>Netherlands</li>
                         </ul>
                     </div>
                     <div class="group-card">
@@ -73,10 +74,11 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+
+                            <li>England</li>
+                            <li>Islamic Republic Iran</li>
+                            <li>USA</li>
+                            <li>Wales</li>
                         </ul>
                     </div>
                     <div class="group-card">
@@ -85,10 +87,10 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+                            <li>Argentina</li>
+                            <li>Saudi Arabia</li>
+                            <li>Mexico</li>
+                            <li>Poland</li>
                         </ul>
                     </div>
                     <div class="group-card">
@@ -97,10 +99,12 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+
+
+                            <li> France</li>
+                            <li>Australia</li>
+                            <li>Denmark</li>
+                            <li>Tunisia </li>
                         </ul>
                     </div>
                     <div class="group-card">
@@ -109,10 +113,10 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+                            <li>Spain</li>
+                            <li>Costa Rica</li>
+                            <li>Germany</li>
+                            <li>Japan</li>
                         </ul>
                     </div>
                     <div class="group-card">
@@ -121,10 +125,12 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+
+
+                            <li> Belgium</li>
+                            <li>Canada</li>
+                            <li>Morocco</li>
+                            <li>Croatia</li>
                         </ul>
                     </div>
                     <div class="group-card">
@@ -133,10 +139,10 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+                            <li>Brazil</li>
+                            <li>Serbia</li>
+                            <li>Switzerland</li>
+                            <li>Cameroon</li>
                         </ul>
                     </div>
                     <div class="group-card">
@@ -145,13 +151,13 @@
 
                         </h2>
                         <ul>
-                            <li>team 1</li>
-                            <li>team 2</li>
-                            <li>team 3</li>
-                            <li>team 4</li>
+                            <li>Portugal</li>
+                            <li>Ghana</li>
+                            <li>Uruguay</li>
+                            <li>Republic of Korea</li>
                         </ul>
                     </div>
-                </div>
+                </article>
             </div>
             <div class="display-on-tab">
                 <a href="#" class="">Veiw All </i>
