fix some responsive issue on tab divice

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                             The <span class="colured">Greatest show</span> on the earth
                         </h1>
                         <p class="hero-dicripsation">
-                            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                            welcome to the most engaigind sports show on planet earth. it's fifa world cup 2022, hosted a Quater. in this tournament there 32 of our best team across the globe are fighting for the world cup championship
                         </p>
                         <a href="#" class="deafualt-button">Watch Live <i class="fa-solid fa-angle-right"></i>
               </a>
                     </div>
                     <div class="hero-sectoin-rigth">
-                        <img src="./assets/images/Banner Image.png" alt="an image of a football player " />
+                        <img src="./assets/images/groupBanner.png" alt="an image of a football player " />
                     </div>
                 </div>
             </div>
