--- a/markup/group.html
+++ b/markup/group.html
@@ -28,10 +28,10 @@
                 <div class="flex-box">
                     <div class="hero-sectoin-left">
                         <h1 class="hero-heading">
-                            The <span class="colured">Greatest show</span> on the earth
+                            Find Your<span class="colured"> favourite team </span>in simpler way
                         </h1>
                         <p class="hero-dicripsation">
-                            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                            This page contains all the information about the groups of fifa worldcup-2022
                         </p>
                         <a href="#" class="deafualt-button">Watch Live <i class="fa-solid fa-angle-right"></i>
               </a>
@@ -159,9 +159,7 @@
                     </div>
                 </article>
             </div>
-            <div class="display-on-tab">
-                <a href="#" class="">Veiw All </i>
-            </div>
+
     </section>
 
     <footer>
@@ -175,17 +173,17 @@
                 <li><a href="#">goal live</a></li>
 
 
-                </ul>
+            </ul>
 
-                <ul class="footer-icon-menu">
-                    <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></li>
-                    <li>
-                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram-square"></i></a>
-                    </li>
-                </ul>
-            </div>
-            </footer>
+            <ul class="footer-icon-menu">
+                <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a></li>
+                <li><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></li>
+                <li>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram-square"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
