fix some style and responsiveness

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
                             <h1 class="blog-title">
-                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                                Real Sociedad sign Takefusa Kubo from Real Madrid
                             </h1>
                             <div class="article-stat">
                                 <div class="time">
@@ -108,7 +108,7 @@
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
                             <h1 class="blog-title">
-                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                                Celtic complete double signing of Mooy and Jenz
                             </h1>
                             <div class="article-stat">
                                 <div class="time">
@@ -130,7 +130,7 @@
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
                             <h1 class="blog-title">
-                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                                Liverpool defender Williams seals loan switch to Blackpool
                             </h1>
                             <div class="article-stat">
                                 <div class="time">
@@ -150,9 +150,9 @@
                             <img src="./assets/images/aguaro.jpg" alt="" />
                         </div>
                         <div class="blog-card-info">
-                            <a href="#" class="blog-button">Transfer</a>
+                            <a href="#" class="blog-button">appoint</a>
                             <h1 class="blog-title">
-                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                                Chelsea appoint Tom Glick as president of business
                             </h1>
                             <div class="article-stat">
                                 <div class="time">
@@ -172,9 +172,9 @@
                             <img src="./assets/images/neymar.jpg" alt="" />
                         </div>
                         <div class="blog-card-info">
-                            <a href="#" class="blog-button">Transfer</a>
+                            <a href="#" class="blog-button">CL final</a>
                             <h1 class="blog-title">
-                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                                CL final in Paris became a 'nightmare', says Liverpool mayor
                             </h1>
                             <div class="article-stat">
                                 <div class="time">
@@ -195,7 +195,7 @@
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
                             <h1 class="blog-title">
-                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                                Chelsea sign Senegal defender Kalidou Koulibaly from Napoli
                             </h1>
                             <div class="article-stat">
                                 <div class="time">
@@ -216,7 +216,7 @@
                         <div class="blog-card-info">
                             <a href="#" class="blog-button">Transfer</a>
                             <h1 class="blog-title">
-                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                                Christian Eriksen joins Manchester United on a free transfer
                             </h1>
                             <div class="article-stat">
                                 <div class="time">
